--- a/style.css
+++ b/style.css
@@ -2,3 +2,14 @@ body {
   background-color: pink;
   text-align: center;
 }
+
+h1 {
+  text-size: 150%;
+  color: purple;
+
+}
+h2 {
+  
+}
+
+{p text-align: left}
