--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: salmon;
+  background-color: lightsalmon;
   font-family: "Helvetica", "sans serif"
 }
 
@@ -22,4 +22,3 @@ h3 {
 }
 
 
-{p text-align: left}
